crates/toml_edit/tests/snapshots/invalid/string/bad-escape-4.stderr
TOML parse error at line 1, column 12
  |
1 | a = "a \\\ b"
  |            ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
